--- a/custom_components/xiaomi_miio_opple_light/manifest.json
+++ b/custom_components/xiaomi_miio_opple_light/manifest.json
@@ -6,8 +6,8 @@
   "dependencies": [],
   "codeowners": ["@lelemka0"],
   "requirements": [
-    "construct==2.9.45",
+    "construct>=2.9.45",
     "python-miio>=0.5.9.2"
   ],
-  "version": "v1.0"
+  "version": "v1.0.0"
 }
